--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,8 @@
-a:
-	sudo gcc main.c -lwiringPi
+# Not using Modules
+T: 
+	gcc main.c -D "FOR_TEST=1"
+	./a.out
+# To using Modules
+M:
+	sudo gcc main.c 
 	sudo ./a.out
