--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,6 @@
+# Help
+How_To_Use:
+	echo "\n\n\n모듈을 사용할 때 : make M\n\n모듈을 사용하지 않을 때 : make T\n\n"
 # Not using Modules
 T: 
 	gcc main.c -D "FOR_TEST=1"
