모듈없이 테스트 가능하게 코드 만들었음. 주석은 달아놓았으나 모르는건 전화 하세요

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,9 +3,9 @@ How_To_Use:
 	echo "\n\n\n모듈을 사용할 때 : make M\n\n모듈을 사용하지 않을 때 : make T\n\n"
 # Not using Modules
 T: 
-	gcc main.c -D "FOR_TEST=1"
+	gcc main.c
 	./a.out
 # To using Modules
 M:
-	sudo gcc main.c -lwiringPi
+	sudo gcc main.c -D "FOR_MODULE=1"
 	sudo ./a.out
